umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_rdkit_Issue3009836.3.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 32
bond_count: 34
sum_formula: C25O7
graph6: _hCGGC@?G?_@?@??_?G?@??C??G??_??C??@??__???_??@?Q??????__??????@????C_???_????G????C
