umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_rdkit_MolFileChgBug.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 30
bond_count: 33
sum_formula: C27H2O-2
graph6: "]KO[@A?@OPA?O??`C??C?_???A??@I?????A??????__?A????C????_???G???AC????G????"
