umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_rdkit_ST-0023267_B.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 68
bond_count: 75
sum_formula: C50N11O6S
graph6: ~?@C?G????O??eAG???_?GO@??AC?O??O??CA?@???G??A?O?@???A????__??G???A????OA???????G?A???C@?????????G????C_C???GO??????????@??????O?????C?????C???????G??????G??????C??????@??????AG?O????????????@??A????@????????_??????@G??O_??????????G????????_??????????G????????G????????G????????A?????????@?????????C?????????A??????????_?????????G?????????@?????????AC??????????_??????????G??????A????
