umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_rdkit_alicin.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 19
bond_count: 18
sum_formula: C6H10OS2
graph6: RhCI?C@C?_@?@?@??O?C??O??_?@??
