umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_rdkit_chembl1203199.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 25
bond_count: 27
sum_formula: C20ClN2OS
graph6: XhCOGC@?GG_C?@??_?G?@??C@AI?????C??@???G???_??P????
